--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          <nav class="flex justify-between items-center md:pt-4">
             
                 <div><img class="w-16 xl:w-24 2xl:w-32" src="Logo/Real Estate Minimal Logo.png" alt=""></div>
-                <div class="nav-links duration-500 absolute lg:static lg:min-h-fit bg-slate-950 lg:bg-[#101D2D] min-h-[60vh] left-0 top-[-100%] lg:w-auto w-full flex items-center px-5 z-10">
+                <div class="nav-links duration-500 absolute lg:static lg:min-h-fit bg-slate-950 lg:bg-[#101D2D] py-5 min-h-[30vh] right-0 top-[-100%] w-[40vw] lg:w-auto  flex items-center px-5 z-10">
                     <ul class="flex lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-6 text-neutral-300 font-medium">
                         <li><a class="hover:text-[#0097b2]" href="#">Pricing</a></li>
                         <li><a class="hover:text-[#0097b2]" href="#">Products</a></li>
@@ -121,7 +121,7 @@
                 <h2 class="pb-5 lg:pb-8 text-2xl md:text-3xl poppins-semibold bg-gradient-to-r from-gray-200 to-gray-400 inline-block  text-transparent bg-clip-text">
                   WORKFLOWS
                 </h2>
-                <div class="px-10 lg:px-48">
+                <div class="px-10 md:px-28 lg:px-48 xl:px-52 2xl:px-56">
                     <hr class="poppins-extrabold">
                 </div>
             </div>
@@ -187,8 +187,39 @@
         </section>
 
         <!-- Built exclusively for you section starts from here -->
-        <section class="px-4 md:px-8 lg:px-14 xl:px-20 2xl:px-24">
+        <section class="px-4 md:px-8 lg:px-14 xl:px-20 2xl:px-24 space-y-5 xl:space-y-8">
+              <div class="text-center px-6 lg:px-20 xl:px-32">
+                <h2 class="pb-5 lg:pb-8 text-2xl md:text-3xl poppins-semibold bg-slate-800 inline-block  text-transparent bg-clip-text">
+                    Built exclusively for you
+                </h2>
+                <p class="text-sm lg:text-lg xl:text-xl 2xl:text-2xl">
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum — semper quis lectus nulla at volutpat diam ut venenatis.
+                </p>
+              </div>
 
+              <div class="space-y-6 gap-5 xl:gap-12 md:grid md:grid-cols-2 justify-center items-center md:px-10 xl:px-24 2xl:px-28">
+                <ul class="px-4 gap-4 md:gap-6 md:px-0 grid grid-cols-2 justify-center md:justify-end items-center text-center py-5">
+                    <li class="hover:bg-green-200 rounded-2xl lg:rounded-3xl border-b-4 hover:border-rose-950 py-6">
+                        <a class="space-y-2 md:space-y-3 xl:space-y-5" href="">
+                            <div class="flex justify-center items-center">
+                                <img class="h-10 w-10 md:h-14 md:w-14 xl:h-20 xl:w-20" src="icons/feedback.png" alt="">
+                            </div>
+                            <p class="text-sm xl:text-xl 2xl:text-2xl">Internal Feedback</p>
+                        </a>
+                    </li>
+                    <li class="hover:bg-green-200 rounded-2xl lg:rounded-3xl border-b-4 hover:border-rose-950 py-6">
+                        <a class="space-y-2 md:space-y-3 xl:space-y-5" href="">
+                            <div class="flex justify-center items-center">
+                                <img class="h-10 w-10 md:h-14 md:w-14 xl:h-20 xl:w-20" src="icons/review.png" alt="">
+                            </div>
+                            <p class="text-sm xl:text-xl 2xl:text-2xl">Star Reviews</p>
+                        </a>
+                    </li>
+                </ul>
+                <div class="flex justify-center items-center md:border-l-4 border-b-slate-700">  
+                    <img class="h-2/3 w-2/3 md:h-[14rem] md:w-[18rem] xl:h-[20rem] xl:w-[26rem]" src="images/review.PNG" alt="">
+                </div>
+              </div>
         </section>
 
        <!--Shaped to meet your needs section  starts from here --> 
