modified simplify section

--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
         <section>
             <div class="relative ">
 
-            <div class=" w-full h-[50vh] bg-slate-900 flex justify-center items-center">
+            <div class=" w-full h-[30vh] bg-slate-900 flex justify-center items-center md:items-start drop-shadow-2xl shadow-black">
                 <div class="text-center">
-                    <h4 class="text-2xl md:text-3xl lg:text-4xl xl:text-5xl text-slate-300 caveat-uniquifier font-bold leading-relaxed">
+                    <h4 class="text-2xl md:text-3xl lg:text-4xl xl:text-5xl text-slate-300 caveat-uniquifier font-bold leading-loose">
                         Simplify operating and <br>manage with transparency
                     </h4>
                 </div>
@@ -290,9 +290,21 @@
             <!-- -------------- -->
                 <div class="pt-10 space-y-10 ">
                     <div>
-                        <div class="flex justify-center absolute"><img class=" w-6 h-8 top-auto -mt-5" src="icons/pin.png" alt=""></div>
-                        <div class="flex justify-start absolute"><img class="w-10 h-10  top-auto -mt-5" src="icons/one.png" alt=""></div>
-                        <div class="relative mx-14 p-6 bg-slate-200 rounded-xl"><img class="" src="images/transparency-3.jpg" alt=""></div>
+                        <div class="flex justify-center relative"><img class="absolute w-6 h-8 top-auto -mt-5" src="icons/pin.png" alt=""></div>
+                        <div class="flex justify-center relative"><img class="w-10 h-10 absolute top-auto -mt-5" src="icons/one.png" alt=""></div>
+                        <div class="mx-16 p-6 bg-slate-200 rounded-xl"><img class="h-36 w-full" src="images/transparency-3-copy.jpg" alt=""></div>
+                    </div>
+
+                    <div>
+                        <div class="flex justify-center relative"><img class="absolute w-6 h-8 top-auto -mt-5" src="icons/pin.png" alt=""></div>
+                        <div class="flex justify-center relative"><img class="w-10 h-10 absolute top-auto -mt-5" src="icons/two.png" alt=""></div>
+                        <div class="mx-16 p-6 bg-slate-200 rounded-xl"><img class="h-36 w-full" src="images/transparency-2.jpg" alt=""></div>
+                    </div>
+
+                    <div>
+                        <div class="flex justify-center relative"><img class="absolute w-6 h-8 top-auto -mt-5" src="icons/pin.png" alt=""></div>
+                        <div class="flex justify-center relative"><img class="w-10 h-10 absolute top-auto -mt-5" src="icons/three.png" alt=""></div>
+                        <div class="mx-16 p-6 bg-slate-200 rounded-xl"><img class="h-36 w-full" src="images/transparency-1.jpg" alt=""></div>
                     </div>
                 
                 </div>
